--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,18 @@ meter {
 }
 
 /*CSS starts here*/
+@font-face {
+    font-family: 'Calibri';
+    src: url('../fonts/calibri.woff') format('woff'),
+        url('../fonts/calibri.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Calibri';
+    src: url('../fonts/calibrib.woff') format('woff'),
+        url('../fonts/calibrib.ttf') format('truetype');
+    font-weight: bold;
+}
 
 html {
     font-size: 1px;
@@ -102,11 +114,12 @@ body {
 
 .bottomSpace {
     height: 70px;
-    background-image: url('images\ffffff.png');
+    background-image: url('../images/ffffff.png');
 }
 
 /*Current link*/
 .current {
+    font-family: 'Calibri';
     font-weight: bold;
 }
 
@@ -194,7 +207,7 @@ body {
         padding: 20px 30px;
         font-size: 25rem;
         color: #000;
-        font-family: "Calibri";
+        font-family: 'Calibri';
         text-align: right;
     }
 
@@ -222,7 +235,7 @@ body {
     .contentContainer {
         font-size: 20rem;
         color: #000;
-        font-family: "Calibri";
+        font-family: 'Calibri';
         width: 90%;
         margin: 0 auto;
     }
@@ -255,6 +268,10 @@ body {
         box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
         -webkit-box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
         -moz-box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
+    }
+
+    .hero img {
+        display: block;
     }
 
     /*About page*/
@@ -369,7 +386,7 @@ body {
         border: 1rem solid #D4D4D4;
         margin-top: 5rem;
         background-color: #ECECEC;
-        font-family: "Calibri";
+        font-family: 'Calibri';
     }
 
     .form-group>textarea {
@@ -661,7 +678,7 @@ body {
         box-sizing: border-box;
         height: 95%;
         width: 90%;
-        font-family: "Calibri";
+        font-family: 'Calibri';
         padding: 75rem 25rem 50rem 25rem;
         line-height: 1.3;
         overflow-y: scroll;
@@ -892,7 +909,7 @@ body {
         z-index: 1;
         overflow: hidden;
         font-size: 25rem;
-        font-family: "Calibri";
+        font-family: 'Calibri';
     }
 
     .topNav {
@@ -1026,7 +1043,7 @@ body {
     .contentContainer {
         font-size: 23rem;
         color: #000;
-        font-family: "Calibri";
+        font-family: 'Calibri';
         margin-left: 300px;
         padding: 50px 50px 0px 50px;
     }
@@ -1077,6 +1094,7 @@ body {
         box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
         -webkit-box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
         -moz-box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
+        display: block;
     }
 
     /*About page*/
@@ -1206,7 +1224,7 @@ body {
         border: 1rem solid #D4D4D4;
         margin-top: 5rem;
         background-color: #ECECEC;
-        font-family: "Calibri";
+        font-family: 'Calibri';
     }
 
     .form-group textarea {
@@ -1497,7 +1515,7 @@ body {
         text-align: left;
         padding: 20px;
         box-sizing: border-box;
-        font-family: "Calibri";
+        font-family: 'Calibri';
         padding: 50rem 60rem;
         line-height: 1.3;
         height: 90%;
@@ -1767,7 +1785,7 @@ body {
         z-index: 1;
         overflow: hidden;
         font-size: 25rem;
-        font-family: "Calibri";
+        font-family: 'Calibri';
     }
 
     .topNav {
@@ -1901,7 +1919,7 @@ body {
     .contentContainer {
         font-size: 23rem;
         color: #000;
-        font-family: "Calibri";
+        font-family: 'Calibri';
         margin-left: 300px;
         padding: 50px 50px 0px 50px;
     }
@@ -1952,6 +1970,7 @@ body {
         box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
         -webkit-box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
         -moz-box-shadow: 5px 5px 20px 5px rgba(0, 0, 0, 0.6);
+        display: block;
     }
 
     /*About page*/
@@ -2080,7 +2099,7 @@ body {
         border: 1rem solid #D4D4D4;
         margin-top: 5rem;
         background-color: #ECECEC;
-        font-family: "Calibri";
+        font-family: 'Calibri';
     }
 
     .form-group textarea {
@@ -2371,7 +2390,7 @@ body {
         text-align: left;
         padding: 20px;
         box-sizing: border-box;
-        font-family: "Calibri";
+        font-family: 'Calibri';
         padding: 50rem 60rem;
         line-height: 1.3;
         height: 90%;
